init SelectUnpaidSummaries
